// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonComponent of type Anchor should render as an anchor html element with required parameters 1`] = `
<a
  active="false"
  aria-label="aNewAriaLabel"
  aria-labelledby="aNewArialabelledBy"
  class="md-button md-button--36"
  href=""
  md-button=""
  ng-reflect-active="false"
  ng-reflect-circle="false"
  ng-reflect-color=""
  ng-reflect-disabled="false"
  ng-reflect-expand="false"
  ng-reflect-href=""
  ng-reflect-loading="false"
  ng-reflect-remove-style="false"
  ng-reflect-size="36"
  ng-reflect-type="button"
  tabindex="0"
  type="button"
>
  
  <span
    class="md-button__children"
    ng-reflect-ng-style="[object Object]"
    style="opacity: 1;"
  >
    Anchor
  </span>
</a>
`;

exports[`ButtonComponent of type Button should render as a button html element with required parameters 1`] = `
<button
  active="false"
  aria-label="aNewAriaLabel"
  aria-labelledby="aNewArialabelledBy"
  class="md-button md-button--36"
  href=""
  md-button=""
  ng-reflect-active="false"
  ng-reflect-circle="false"
  ng-reflect-color=""
  ng-reflect-disabled="false"
  ng-reflect-expand="false"
  ng-reflect-loading="false"
  ng-reflect-remove-style="false"
  ng-reflect-size="36"
  ng-reflect-type="button"
  tabindex="0"
  type="button"
>
  
  <span
    class="md-button__children"
    ng-reflect-ng-style="[object Object]"
    style="opacity: 1;"
  >
     Button 
  </span>
</button>
`;

exports[`ButtonComponent of type Input should render as an anchor html element with required parameters 1`] = `
<input
  active="false"
  aria-label="aNewAriaLabel"
  aria-labelledby="aNewArialabelledBy"
  class="md-button md-button--36"
  href=""
  md-button=""
  ng-reflect-active="false"
  ng-reflect-circle="false"
  ng-reflect-color=""
  ng-reflect-disabled="false"
  ng-reflect-expand="false"
  ng-reflect-href=""
  ng-reflect-loading="false"
  ng-reflect-remove-style="false"
  ng-reflect-size="36"
  ng-reflect-type="button"
  tabindex="0"
  type="button"
>
  
  <span
    class="md-button__children"
    ng-reflect-ng-style="[object Object]"
    style="opacity: 1;"
  />
</input>
`;
